# schemes_solution

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
deploy/schemes_solution/: settings.toml
src/: app.py  main.py
src/application/common/: dto.py  exceptions.py
src/application/schemes/: interfaces.py
src/application/services/schemes_searcher/: schemes_searcher.py  types.py  validators.py
src/infrastracture/mongo/: session.py
src/infrastracture/mongo/repos/schemes_repo/: schemes_repo.py
src/presentation/: app.py  exceptions.py
src/presentation/routers/: dependencies.py
src/presentation/routers/schemes/: v1.py
src/presentation/routers/services/scheme_searcher/: v1.py
tests/: test_searcher.py  test_validator.py
