[tool.poetry]
name = "schemes-solution"
version = "0.1.0"
description = ""
authors = ["Dmitrij <cwfrcpp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
motor = "^3.3.2"
pydantic = {extras = ["email"], version = "^2.5.1"}
uvicorn = "^0.24.0.post1"
dynaconf = "^3.2.4"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
